@@ -1,0 +1,90 @@
+[BEGIN_CANVAS]
+    Canv_Axis_NDiv = '510,507'; #X, Y
+    Canv_Dim = '1000,1000'; #X, Y
+    Canv_DrawOpt = 'APE1';
+    Canv_Grid_XY = 'false,false'; #X, Y
+    Canv_Latex_Line = '0.19,0.75, Slice~Test~Foil~Production'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.19,0.70, #DeltaV_{Applied}~=~500-550~V'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.19,0.65, Rel.~Humidity~<~40%'; #X_NDC, Y_NDC, String
+    Canv_Legend_Dim_X = '0.65,0.95'; X_NDC_1, X_NDC_2
+    Canv_Legend_Dim_Y = '0.8,0.9'; Y_NDC_1, Y_NDC_2
+    Canv_Legend_Draw = 'true';
+    Canv_Log_XY = 'false,false'; #X, Y
+    Canv_Logo_Pos = '11'; #0, 11, 22, 33
+    Canv_Logo_Prelim = 'true';
+    Canv_Margin_Top = '0.08';
+    Canv_Margin_Bot = '0.14';
+    Canv_Margin_Lf = '0.15';
+    Canv_Margin_Rt = '0.04';
+    Canv_Name = 'SliceTest_Foil_QC2Fast_PostAssembly';
+    Canv_Plot_Type = 'TGraphErrors';
+    Canv_Range_X = '0,70'; #X1, X2
+    Canv_Range_Y = '0,70'; #Y1, Y2
+    Canv_Title_Offset_X = '0.95';
+    Canv_Title_Offset_Y = '1.0';
+    Canv_Title_X = 'Foil Serial Number';
+    Canv_Title_Y = 'Leakage Current #left(nA#right)';
+    [BEGIN_PLOT]
+        Plot_Color = 'kRed-1';
+	Plot_LegEntry = 'Long Foils';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '1';
+        Plot_Marker_Style = '20';
+        Plot_Name = 'g_SliceTest_LongFoil_QC2Fast_PostAssembly';
+        [BEGIN_DATA]
+            #NOTE:  Copying/pasting data from excel may not have the desired effect.
+            #	Have noticed that a "newline" character (which is invisible) is 
+            #	not present in some copy/past actions, if your data does not load
+            #	properly consider this as a potential cause.
+		VAR_INDEP,VAR_DEP
+		4,35
+		48,30
+		1,25
+		53,25
+		6,30
+		49,28
+		45,25
+		50,35
+		11,30
+		46,27
+		44,25
+		52,35
+        [END_DATA]
+    [END_PLOT]
+    [BEGIN_PLOT]
+        Plot_Color = 'kRed+1';
+	Plot_LegEntry = 'Short Foils';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '1';
+        Plot_Marker_Style = '24';
+        Plot_Name = 'g_SliceTest_ShortFoil_QC2Fast_PostAssembly';
+        [BEGIN_DATA]
+            #NOTE:  Copying/pasting data from excel may not have the desired effect.
+            #	Have noticed that a "newline" character (which is invisible) is 
+            #	not present in some copy/past actions, if your data does not load
+            #	properly consider this as a potential cause.
+		VAR_INDEP,VAR_DEP
+		3,25
+		42,25
+		45,20
+		40,20
+		62,34
+		64,34
+		2,20
+		39,27
+		43,30
+		36,30
+		63,38
+		64,31
+		1,25
+		37,30
+		41,30
+		44,30
+		44,30
+		60,44
+		67,29
+        [END_DATA]
+    [END_PLOT]
+[END_CANVAS]
