@@ -1,0 +1,68 @@
+[BEGIN_CANVAS]
+    Canv_Axis_NDiv = '510,507'; #X, Y
+    Canv_Dim = '1000,1000'; #X, Y
+    Canv_DrawOpt = 'APE1';
+    Canv_Grid_XY = 'false,false'; #X, Y
+    Canv_Latex_Line = '0.23,0.9, Slice~Test~Detector~Production'; #X_NDC, Y_NDC, String
+    Canv_Latex_Line = '0.23,0.85, Gas~=~CO_{2}'; #X_NDC, Y_NDC, String
+    Canv_Legend_Dim_X = '0.65,0.95'; X_NDC_1, X_NDC_2
+    Canv_Legend_Dim_Y = '0.67,0.77'; Y_NDC_1, Y_NDC_2
+    Canv_Legend_Draw = 'true';
+    Canv_Log_XY = 'false,false'; #X, Y
+    Canv_Logo_Pos = '33'; #0, 11, 22, 33
+    Canv_Logo_Prelim = 'true';
+    Canv_Margin_Top = '0.08';
+    Canv_Margin_Bot = '0.14';
+    Canv_Margin_Lf = '0.2';
+    Canv_Margin_Rt = '0.04';
+    Canv_Name = 'SliceTest_QC4Det_PerDiffREquiv';
+    Canv_Plot_Type = 'TGraphErrors';
+    Canv_Range_X = '0,7'; #X1, X2
+    Canv_Range_Y = '-1,2'; #Y1, Y2
+    Canv_Title_Offset_X = '0.95';
+    Canv_Title_Offset_Y = '1.5';
+    Canv_Title_X = 'Detector Serial Number';
+    Canv_Title_Y = '#left(R_{Measured} - R_{Slope} #right) / R_{Slope}';
+    [BEGIN_PLOT]
+        Plot_Color = 'kRed-1';
+	Plot_LegEntry = 'Long Detectors';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '1';
+        Plot_Marker_Style = '20';
+        Plot_Name = 'g_SliceTest_Long_QC4Det_PerDiffREquiv';
+        [BEGIN_DATA]
+            #NOTE:  Copying/pasting data from excel may not have the desired effect.
+            #	Have noticed that a "newline" character (which is invisible) is 
+            #	not present in some copy/past actions, if your data does not load
+            #	properly consider this as a potential cause.
+		VAR_INDEP,VAR_DEP
+		1,0.6
+		2,0.5
+		3,-0.5
+		4,-0.8
+        [END_DATA]
+    [END_PLOT]
+    [BEGIN_PLOT]
+        Plot_Color = 'kRed+1';
+	Plot_LegEntry = 'Short Detectors';
+        Plot_Line_Size = '1';
+        Plot_Line_Style = '1';
+        Plot_Marker_Size = '1';
+        Plot_Marker_Style = '24';
+        Plot_Name = 'g_SliceTest_Short_QC4Det_PerDiffREquiv';
+        [BEGIN_DATA]
+            #NOTE:  Copying/pasting data from excel may not have the desired effect.
+            #	Have noticed that a "newline" character (which is invisible) is 
+            #	not present in some copy/past actions, if your data does not load
+            #	properly consider this as a potential cause.
+		VAR_INDEP,VAR_DEP
+		1,0.3
+		2,1.36
+		3,0.28
+		4,0.55
+		5,-0.71
+		6,0.51
+        [END_DATA]
+    [END_PLOT]
+[END_CANVAS]
