@@ -1,0 +1,32 @@
+[BEGIN_CANVAS]
+    Canv_Axis_NDiv = '510,510'; #X, Y
+    Canv_Dim = '1000,1000'; #X, Y
+    Canv_DrawOpt = 'E1';
+    Canv_Grid_XY = 'false,false'; #X, Y
+    Canv_Latex_Line = '0.19,0.75, GE1/1-VII-L-CERN-0002'; #X_NDC, Y_NDC, String
+    Canv_Legend_Dim_X = '0.5,0.95'; X_NDC_1, X_NDC_2
+    Canv_Legend_Dim_Y = '0.14,0.40'; Y_NDC_1, Y_NDC_2
+    Canv_Legend_Draw = 'false';
+    Canv_Log_XY = 'false,false'; #X, Y
+    Canv_Logo_Pos = '11';
+    Canv_Logo_Prelim = 'true';
+    Canv_Margin_Top = '0.08';
+    Canv_Margin_Bot = '0.12';
+    Canv_Margin_Lf = '0.12';
+    Canv_Margin_Rt = '0.04';
+    Canv_Name = 'GE11-VII-L-CERN-0002_RespFitPkPosDataset';
+    Canv_Normalize = 'true';
+    Canv_Plot_Type = 'TH1F';
+    Canv_Range_X = '0,2500'; #X1, X2
+    Canv_Range_Y = '0,150'; #Y1, Y2
+    Canv_Title_Offset_X = '1.2';
+    Canv_Title_Offset_Y = '1.65';
+    Canv_Title_X = 'Fitted Cu Fluorescence Peak Position #left(ADC#right)';
+    Canv_Title_Y = 'Entries';
+    [BEGIN_PLOT]
+        Plot_Color = 'kBlack';
+        Plot_Name = 'h_Summary_ResponseFitPkPosDataset';
+        Plot_Root_File = 'GE11-VII-L-CERN-0002_Summary_Physics_Optimized_RandTrig_XRay40kV100uA_580uA_10826kEvt_AnaWithFits.root';
+        Plot_Root_Path = 'Summary/';
+    [END_PLOT]
+[END_CANVAS]
